# AI_News_App

./: .gitignore  CLAUDE.md  requirements.md  roadmap.md  ruff.toml  要件定義書.md  設計計画.md  開発背景.md
.github/workflows/: ci.yml  deploy.yml  expo-preview.yml  frontend.yml  security.yml
backend/: .gitignore  Dockerfile  Dockerfile.batch  pyproject.toml  test_download_pdf.py  test_pipeline_local.py  test_post_l3.py  test_real_pdf.py
backend/alembic/: env.py
backend/alembic/versions/: 20260219_001_initial_schema.py
backend/api/: app.py  dependencies.py  handler.py  schemas.py
backend/api/routers/: bookmarks.py  categories.py  health.py  papers.py  users.py
backend/batch/: config.py  handler.py  l1_collector.py  l2_selector.py  l3_analyzer.py  pipeline.py  post_l3_reviewer.py
backend/scripts/: run_local_pipeline.py  seed_papers.py  setup_anchors.py
backend/tests/: conftest.py  test_api_bookmarks.py  test_api_handler.py  test_api_papers.py  test_batch_handler.py  test_l1_collector.py  test_l2_selector.py  test_l3_analyzer.py  test_pipeline.py
backend/utils/: db.py  logger.py  models.py  secrets.py
frontend/: .env  .gitignore  App.js  app.json  babel.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: Simple.test.js
frontend/app/: _layout.tsx  login.tsx
frontend/components/: CategoryTab.tsx  PaperCard.tsx
frontend/hooks/: useBookmarks.ts  usePapers.ts  useUser.ts
frontend/lib/: amplify.ts  api-client.ts  api.ts  query-client.ts
infra/: package-lock.json
infra/lib/: api-stack.ts  auth-stack.ts  batch-stack.ts  database-stack.ts  network-stack.ts  storage-stack.ts
設計/: CI_CD_Specification.md  LLM_Refinement.md  agent_design.md  api_specification.md  arxiv_API.md  database_schema.md  pipeline_implementation.md  ui_design.md  vpc_architecture.md  あとでやること.md
設計/01_Overview/: remaining_tasks.md  あとでやること.md
設計/02_Architecture/: aws_infrastructure_spec.md  security_architecture.md  stack_architecture.md
(+26 files in other folders)
