[project]
name = "ai-research-os-backend"
version = "0.1.0"
description = "Backend for AI Research OS"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "mangum>=0.17.0",
    "pydantic>=2.10.0",
    "requests>=2.32.0",
    "aws-lambda-powertools[all]>=3.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "openai>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["alembic/versions/"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["api", "batch", "utils"]
